# KimaiTray

./: .env.development  .env.production  .env.staging  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: i18n-check.mjs
src/: index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keychain.rs  lib.rs  main.rs  shortcuts.rs  tray.rs
src/api/: connectionService.ts  favoritesStore.ts  kimaiClient.ts  kimaiTypes.ts  pauseStore.ts  secureStore.ts  tagApi.ts  trayApi.ts
src/components/: ActiveTimerCard.tsx  ApiErrorDialog.tsx  ColorDots.tsx  DateTimePicker.tsx  EmptyTimerState.tsx  ErrorBoundary.tsx  FavoriteTaskItem.tsx  FavoriteTasksList.tsx  HeaderStatus.tsx  IdleDialog.tsx  NewTaskForm.tsx  PausedTimerCard.tsx  PopupFooterActions.tsx  RecentTaskItem.tsx  RecentTasksList.tsx  SearchableSelect.tsx  TagPill.tsx  TagsInput.tsx  TodayEntryItem.tsx  TodaySection.tsx
src/hooks/: useActiveTimer.ts  useAppearance.ts  useEditTimer.ts  useEntityLookup.ts  useFavorites.ts  useKimaiClient.ts  useKimaiTags.ts  useLanguageSync.ts  usePauseTimer.ts  useRecentTasks.ts  useStartTask.ts  useTodayTimesheets.ts  useUpdater.ts
src/mock/: data.ts
src/providers/: QueryProvider.tsx
src/settings/: AboutSection.tsx  AppearanceSection.tsx  ConnectionSection.tsx  Controls.tsx  FeaturesSection.tsx  GeneralSection.tsx  IdleDetectionSection.tsx  IntegrationsSection.tsx  ShortcutsSection.tsx  TestSection.tsx  TimerSection.tsx  TrayWindowSection.tsx  UpdateSection.tsx  service.ts  useSettings.ts
src/utils/: colorMode.ts  logger.ts  time.ts
(+13 files in other folders)
