[package]
name = "kimaimare"
version = "0.1.0"
description = "KimaiMate - Kimai time-tracking tray app"
authors = ["you"]
edition = "2021"

[lib]
name = "kimaimate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.3"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2.5.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }
