[package]
name = "kimaitray"
version = "0.1.0"
description = "KimaiMate — Kimai time-tracking tray companion"
authors = ["engazan"]
edition = "2021"

[lib]
name = "kimaitray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2.4.3"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }
